# 4-axis-arm

./: README.md
MATLAB-sim/: Jxerr.slx  clik.m  direct_kynematics.m  init.m  jacobian.m  path.m  plot_robot.m
ROS-src/gcode_pkg/: CMakeLists.txt  package.xml
ROS-src/gcode_pkg/msg/: Position_EE.msg
ROS-src/gcode_pkg/src/: gcode_interpreter.py  prova.ngc
ROS-src/joint_pkg/: CMakeLists.txt  package.xml
ROS-src/joint_pkg/msg/: Data_Joints_EE.msg
ROS-src/joint_pkg/src/: joint_publisher.cpp
ROS-src/vel_to_gazebo_pkg/: CMakeLists.txt  package.xml
ROS-src/vel_to_gazebo_pkg/src/: joint_to_gazebo_publisher.cpp
