<?xml version="1.0"?>
<package format="1">
  <name>gcode_pkg</name>
  <version>1.1.1</version>
  <description>gcode package</description>
  <maintainer email="matteo@todo.todo">matteo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>message_runtime</build_depend>  

  <run_depend>rospy</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>  
  <run_depend>message_runtime</run_depend>

</package>
